# flashcard

./: .gitignore  Cargo.toml  README.md
migrations/2019-02-04-191503_initial-schema/: down.sql  up.sql
migrations/2019-02-05-002345_add-timestamp-to-decks/: down.sql  up.sql
migrations/2019-02-05-011344_change-author-design/: down.sql  up.sql
migrations/2019-02-05-043125_change-author-to-decks/: down.sql  up.sql
migrations/2019-03-06-202315_add-published-boolean-to-decks/: down.sql  up.sql
src/: contexts.rs  forms.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: base.html.tera  create-deck.html.tera  create.html.tera  edit-deck.html.tera  error.html.tera  index.html.tera  login-signup.html.tera  signup.html.tera
