[package]
name = "flashcard"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres"] }
dotenv = "0.13.0"
rocket = "0.4.0"
tera = "0.11.20"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates"]

